# Ros2_Robot

src/robot_nav2/: CMakeLists.txt  package.xml
src/robot_nav2/behavior_trees/: navigate_through_poses.xml  navigate_to_pose.xml
src/robot_nav2/config/: nav2_params.yaml
src/robot_nav2/launch/: localization.launch.py  nav2.launch.py  navigation.launch.py
src/robot_nav2/rviz/: nav2.rviz
src/robot_package/: control_node.py  robot_node.py
src/robot_package/urdf/: robot.urdf
src/robot_slam/: CMakeLists.txt  package.xml
src/robot_slam/config/: slam_toolbox_localization_params.yaml  slam_toolbox_params.yaml
src/robot_slam/launch/: localization.launch.py  save_map.launch.py  slam.launch.py  slam_with_rviz.launch.py
src/robot_slam/rviz/: slam.rviz
